# langevin-fts

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  Doxyfile  L1D.json  LICENSE  MANIFEST.in  Makefile  README.md  TODO.md  environment.yml  pyproject.toml  run.sh
cmake/: FindMKL.cmake  polymerfts-config.cmake.in
conda-recipe/: conda_build_config.yaml  meta.yaml
deep_learning/: DFTS_train.py  deeplfts.py
devel/: .gitignore  AdamRandomToGyroid.py  Branched.py  Branched_Layout.py  HomopolymerMixture.py  MixtureBlockBlock.py  MixtureBlockHomo.py  MixtureHomoHomo.py  MixtureHomoRandom.py  MultiPolymerScft.py  Platforms.py  PropagatorMask2D.py  README.md  RealSpace.py  RealSpace1D.py  RealSpace1DPerformanceTest.py  RealSpace2D.py  RealSpace3D.py  RealSpace3DPerformanceTest.py  StatisticalSegmentLength.py  StressRootFinding.py  TestValidation.py  test_grafted_brush_direct.py  visualize_example.py
docker/: Dockerfile.cpu  Dockerfile.cuda  docker-compose.yml
docs/: ClassArchitecture.md  CrystallographicFFT.md  CudaDCT.md  CudaRealTransform.md  DeveloperGuide.md  Features.md  Installation.md  MemoryAndPerformance.md  NonMonotonicConvergence.md  NumericalMethodsPerformance.md  PropagatorKeyFormat.md  PseudoSpectralMethod.md  README.md  RealSpaceConvergence.md  RealSpaceMethod.md  RealSpaceSolver.md  References.md  Scheduler.md  SpaceGroup.md  StressTensorCalculation.md  UserGuide.md  stress_triclinic.md
examples/: ChainStatisticsInFields.py  ComputeConcentration.py  DiscreteGyroidPhase.py  EndToEndDistance.py  SCFT.py  (+25 more)
tests/: BenchmarkMklFftw.cpp  CMakeLists.txt  Hexagonal2D_Input.txt  Rectangular2D_Input.txt  RunTestScftCpp.sh  SameSegmentConsistency.py  SpaceGroupPhasesTest.py  Stress1D_ContinuousInput.txt  Stress1D_ContinuousInputComplex.txt  Stress1D_DiscreteInput.txt  Stress1D_DiscreteInputComplex.txt  Stress2D_ContinuousInput.txt  Stress2D_ContinuousInputComplex.txt  Stress2D_DiscreteInput.txt  Stress2D_DiscreteInputComplex.txt  Stress3D_ContinuousInput.txt  Stress3D_DiscreteInput.txt  TestAbsorbingVsMask.cpp  TestAggregation3D.cpp  TestAggregationDendritic.cpp  TestAggregationDiscreteCpu.cpp  TestAggregationSideChains.cpp  TestArray.cpp  TestBranchedPolymerChain.cpp  TestCNADI4MixedBC.cpp  TestCircularBuffer.cpp  TestCompareBranchKey.cpp  TestCompareRealSpacePseudoSpectral.cpp  TestContourLengthMapping.cpp  TestConvergenceOrderLite.py  TestCpuCudaEquivalenceGuardrails.py  TestCpuDCT2Propagator.cpp  TestCpuDST2Propagator.cpp  TestCpuETDRK4.cpp  TestCpuFFT1D.cpp  TestCpuFFT1DComplex.cpp  TestCpuFFT2D.cpp  TestCpuFFT2DComplex.cpp  TestCpuFFT3D.cpp  TestCpuFFT3DComplex.cpp  (+174 more)
tests/TODO/: TestCpuAndersonMixing.cpp  random_test.f90
tests/cn_adi_benchmark_results/: analysis.json  analysis_extended.json  result_cn-adi2_N10.json  result_cn-adi2_N1000.json  result_cn-adi2_N160.json  result_cn-adi2_N20.json  result_cn-adi2_N320.json  result_cn-adi2_N40.json  result_cn-adi2_N640.json  result_cn-adi2_N80.json  result_cn-adi4-gr_N10.json  result_cn-adi4-gr_N1000.json  result_cn-adi4-gr_N160.json  result_cn-adi4-gr_N20.json  result_cn-adi4-gr_N320.json  result_cn-adi4-gr_N40.json  result_cn-adi4-gr_N640.json  result_cn-adi4-gr_N80.json  result_cn-adi4-lr_N10.json  result_cn-adi4-lr_N1000.json  result_cn-adi4-lr_N160.json  result_cn-adi4-lr_N20.json  result_cn-adi4-lr_N320.json  result_cn-adi4-lr_N40.json  result_cn-adi4-lr_N640.json  result_cn-adi4-lr_N80.json
tests/cn_adi_benchmark_results_3d/: analysis.json  analysis_extended.json  result_cn-adi2_N1000.json  result_cn-adi2_N160.json  result_cn-adi2_N20.json  result_cn-adi2_N320.json  result_cn-adi2_N40.json  result_cn-adi2_N640.json  result_cn-adi2_N80.json  result_cn-adi4-gr_N1000.json  result_cn-adi4-gr_N160.json  result_cn-adi4-gr_N20.json  result_cn-adi4-gr_N320.json  result_cn-adi4-gr_N40.json  result_cn-adi4-gr_N640.json  result_cn-adi4-gr_N80.json  result_cn-adi4-lr_N1000.json  result_cn-adi4-lr_N160.json  result_cn-adi4-lr_N20.json  result_cn-adi4-lr_N320.json  result_cn-adi4-lr_N40.json  result_cn-adi4-lr_N640.json  result_cn-adi4-lr_N80.json
tests/data/: BCC.mat  DD.mat  DP.mat  FCC.mat  Fddd.mat  HCP.mat  PL.mat  SC.mat  SD.mat  SP.mat  Sigma.mat
tests/move/: TestPseudoBranchedContinuous3D.cpp  TestPseudoBranchedDiscrete3D.cpp  TestPseudoBranchedMixtureContinuous3D.cpp  TestPseudoBranchedMixtureDiscrete3D.cpp  TestPseudoLinearDiscrete3D.cpp  TestScft1D.cpp  TestScft2D.cpp  TestScft3D.cpp  TestScheduler.cpp  TestStressLinear1D.cpp  TestStressLinear2D.cpp  TestStressLinear3D.cpp  TestSuperposition3D.cpp
tests/sdc_benchmark/: analyze_results.py  run_sdc_benchmark.py
tests/sdc_benchmark_results/: analysis.json  result_sdc_N10.json  result_sdc_N1000.json  result_sdc_N160.json  result_sdc_N20.json  result_sdc_N320.json  result_sdc_N40.json  result_sdc_N640.json  result_sdc_N80.json
tests/sdc_benchmark_results_3d/: analysis.json  result_sdc_N1000.json  result_sdc_N160.json  result_sdc_N20.json  result_sdc_N320.json  result_sdc_N40.json  result_sdc_N640.json  result_sdc_N80.json
tests/sdc_gyroid_benchmark/: result_cn-adi2_N1000.json  result_cn-adi2_N160.json  result_cn-adi2_N320.json  result_cn-adi2_N40.json  result_cn-adi2_N640.json  result_cn-adi2_N80.json  result_cn-adi4-gr_N1000.json  result_cn-adi4-gr_N160.json  result_cn-adi4-gr_N320.json  result_cn-adi4-gr_N40.json  result_cn-adi4-gr_N640.json  result_cn-adi4-gr_N80.json  result_cn-adi4-lr_N1000.json  result_cn-adi4-lr_N160.json  result_cn-adi4-lr_N320.json  result_cn-adi4-lr_N40.json  result_cn-adi4-lr_N640.json  result_cn-adi4-lr_N80.json  result_etdrk4_N1000.json  result_etdrk4_N160.json  result_etdrk4_N320.json  result_etdrk4_N40.json  result_etdrk4_N640.json  result_etdrk4_N80.json  result_rk2_N1000.json  result_rk2_N160.json  result_rk2_N320.json  result_rk2_N40.json  result_rk2_N640.json  result_rk2_N80.json  result_rqm4_N1000.json  result_rqm4_N160.json  result_rqm4_N320.json  result_rqm4_N40.json  result_rqm4_N640.json  result_rqm4_N80.json  result_sdc-4_N160.json  result_sdc-4_N320.json  result_sdc-4_N40.json  result_sdc-4_N640.json  (+6 more)
(+634 files in other folders)
